# CHIP8

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake
include/: chip8.hpp  imgui_helper.hpp  keyboard.hpp
src/: CMakeLists.txt  chip8.cpp  keyboard.cpp  main.cpp
tests/: CMakeLists.txt  mock_keyboard.hpp  tests-chip8.cpp
